--- a/unpackaged/main/default/classes/SOM_AutomatedEmailWithProcessEXBatch.cls
+++ b/unpackaged/main/default/classes/SOM_AutomatedEmailWithProcessEXBatch.cls
@@ -18,7 +18,7 @@ global class SOM_AutomatedEmailWithProcessEXBatch  Implements Schedulable{
     }
     @future(callout=true)
     public static void DoExport() {
-        List <ProcessException> ProcessExceptionRecords = [Select Id from ProcessException where Status=:SOM_Constants.NEW_PE and Category=:SOM_Constants.PAYMENT];
+        List <ProcessException> ProcessExceptionRecords = [Select Id from ProcessException where Status= 'New' and Category= 'Payment' ];
         List <Report> reportList = [SELECT Id,DeveloperName FROM Report where 
                                     DeveloperName = 'New_SOM_Process_Exception_Report_h7t'];
         String reportId = (String)reportList.get(0).get('Id');
